Pod.yml
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: open-xchange
  name: open-xchange
spec:
  containers:
    - name: mariadb
      image: docker.io/library/mariadb:latest
      ports:
        - containerPort: 3306
      volumeMounts:
        - mountPath: /var/lib/mysql:Z
          name: openxchange-mariadb
    - name: oxspell
      image: docker.io/jamesregis/open-xchange-spellcheck:7.10.6
      ports:
        - containerPort: 8003
    - name: dcs
      image: docker.io/jamesregis/open-xchange-dcs:7.10.6
      ports:
        - containerPort: 61616
    - name: appsuite
      image: docker.io/jamesregis/open-xchange-appsuite:7.10.6
      ports:
        - containerPort: 80
          hostPort: 8080
      volumeMounts:
        - mountPath: /ox/etc:Z
          name: openxchange-etc
        - mountPath: /var/opt/filestore:Z
          name: openxchange-share
        - mountPath: /var/log/open-xchange:Z
          name: openxchange-logs
  restartPolicy: Never
  volumes:
    - HostPath:
        path: /home/james/open-xchange/etc
        type: Directory
      name: openxchange-etc
    - HostPath:
        path: /home/james/open-xchange/share
        type: Directory
      name: openxchange-share
    - HostPath:
        path: /home/james/open-xchange/logs
        type: Directory
      name: openxchange-logs
    - HostPath:
        path: /home/james/open-xchange/mariadb
        type: Directory
      name: openxchange-mariadb
