Deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: ox
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: docker.io/library/mariadb:latest
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: ox
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: ox
  name: ox
  namespace: ox
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ox
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ox
    spec:
      containers:
        - name: oxspell
          image: docker.io/jamesregis/open-xchange-spellcheck:latest
          ports:
            - containerPort: 8003
        - name: dcs
          image: docker.io/jamesregis/open-xchange-dcs:latest
          ports:
            - containerPort: 61616
        - name: appsuite
          image: docker.io/jamesregis/open-xchange-appsuite:latest
          ports:
            - containerPort: 80
          volumeMounts:
            #- mountPath: /ox/etc
            #  name: share
            #  readOnly: false
            #  subPath: ox-appsuite/etc
            - mountPath: /var/opt/filestore
              name: share
              subPath: ox-appsuite/data
            - mountPath: /opt/open-xchange/etc
              name: etc
            # - mountPath: /opt/open-xchange/appsuite/apps/themes
            #   name: share
            #   subPath: ox-appsuite/themes
            - mountPath: /var/log/open-xchange
              name: logs
            - mountPath: /var/log/
              name: logs
            - name: ox-db-password
              mountPath: /run/secrets/ox-db-password
              subPath: ox-db-password
            - name: ox-admin-password
              mountPath: /run/secrets/ox-admin-password
              subPath: ox-admin-password
            - name: ox-master-password
              mountPath: /run/secrets/ox-master-password
              subPath: ox-master-password
      volumes:
        - name: share
          persistentVolumeClaim:
            claimName: ox-share
        - name: logs
          persistentVolumeClaim:
            claimName: ox-logs
        - name: etc
          persistentVolumeClaim:
            claimName: ox-etc
        - name: ox-db-password
          secret:
            secretName: ox-db-password
        - name: ox-admin-password
          secret:
            secretName: ox-admin-password
        - name: ox-master-password
          secret:
            secretName: ox-master-password
---
apiVersion: v1
kind: Service
metadata:
  name: rocky
  namespace: ox
spec:
  selector:
    app.kubernetes.io/name: ox
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ox
  namespace: ox
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: rocky
            port:
              number: 8080
